Added a basic FFM layer for basic CUDA memory operations